--- a/UltrasonicTestingForms/FormMain.resx
+++ b/UltrasonicTestingForms/FormMain.resx
@@ -135,7 +135,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnInfo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 297</value>
+    <value>0, 227</value>
   </data>
   <data name="btnInfo.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>15, 0, 0, 0</value>
@@ -148,7 +148,7 @@
     <value>4</value>
   </data>
   <data name="btnInfo.Text" xml:space="preserve">
-    <value>Инфо</value>
+    <value>Info</value>
   </data>
   <data name="btnInfo.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageBeforeText</value>
@@ -164,51 +164,6 @@
   </data>
   <data name="&gt;&gt;btnInfo.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="btnAddMaterial.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Top</value>
-  </data>
-  <data name="btnAddMaterial.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="btnAddMaterial.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Nirmala UI, 12pt, style=Bold</value>
-  </data>
-  <data name="btnAddMaterial.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>TopLeft</value>
-  </data>
-  <data name="btnAddMaterial.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnAddMaterial.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 227</value>
-  </data>
-  <data name="btnAddMaterial.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>15, 0, 0, 0</value>
-  </data>
-  <data name="btnAddMaterial.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 70</value>
-  </data>
-  <data name="btnAddMaterial.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="btnAddMaterial.Text" xml:space="preserve">
-    <value>Добавить материал</value>
-  </data>
-  <data name="btnAddMaterial.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
-    <value>ImageBeforeText</value>
-  </data>
-  <data name="&gt;&gt;btnAddMaterial.Name" xml:space="preserve">
-    <value>btnAddMaterial</value>
-  </data>
-  <data name="&gt;&gt;btnAddMaterial.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnAddMaterial.Parent" xml:space="preserve">
-    <value>panelMenu</value>
-  </data>
-  <data name="&gt;&gt;btnAddMaterial.ZOrder" xml:space="preserve">
-    <value>1</value>
   </data>
   <data name="btnResult.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Top</value>
@@ -238,7 +193,7 @@
     <value>2</value>
   </data>
   <data name="btnResult.Text" xml:space="preserve">
-    <value>Результат</value>
+    <value>Result</value>
   </data>
   <data name="btnResult.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageBeforeText</value>
@@ -253,7 +208,7 @@
     <value>panelMenu</value>
   </data>
   <data name="&gt;&gt;btnResult.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <data name="btnParams.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Top</value>
@@ -283,7 +238,7 @@
     <value>1</value>
   </data>
   <data name="btnParams.Text" xml:space="preserve">
-    <value>Ввод параметров</value>
+    <value>Parameter Entry</value>
   </data>
   <data name="btnParams.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageBeforeText</value>
@@ -298,7 +253,7 @@
     <value>panelMenu</value>
   </data>
   <data name="&gt;&gt;btnParams.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>2</value>
   </data>
   <data name="MenuTitle.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -310,7 +265,7 @@
     <value>NoControl</value>
   </data>
   <data name="MenuTitle.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 25</value>
+    <value>15, 21</value>
   </data>
   <data name="MenuTitle.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>15, 0, 15, 0</value>
@@ -361,7 +316,7 @@
     <value>panelMenu</value>
   </data>
   <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="panelMenu.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
