--- a/UltrasonicTestingForms/Properties/Resources.resx
+++ b/UltrasonicTestingForms/Properties/Resources.resx
@@ -148,6 +148,9 @@
     <value>#0012</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="github" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\github.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IconProject" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconProject.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
